--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Memory_69733
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 69733-h/images/cover.jpg
 creator:
   author:
     agent_name: Sturgeon, Theodore
@@ -12,6 +15,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/55048
     wikipedia: https://en.wikipedia.org/wiki/Theodore_Sturgeon
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/69733#Memory
 gutenberg_issued: '2023-01-07'
 identifiers:
   gutenberg: '69733'
